rudimentary resume search

--- a/resumes/templates/resumes/groups.html
+++ b/resumes/templates/resumes/groups.html
@@ -13,8 +13,8 @@
 
 <div class="options">
     <form id="search" method="GET" action="">
-        <input type="text" name="query" placeholder="Search... (TODO)">
-        <button class="darkblue-btn" type="submit">Search</button>
+        <input class="search-bar" type="text" name="query" placeholder="Search... (TODO)">
+        <button class="darkblue-btn search-btn"  type="submit">Search</button>
     </form>
 
     <a class="darkblue-btn" href="{% url 'creategroup' %}">Create a group</a>
