--- a/resumes/templates/resumes/user.html
+++ b/resumes/templates/resumes/user.html
@@ -68,9 +68,11 @@
 
 <h2 class="sub-header">Groups</h2>
 {% if groups %}
-    {% for group in groups %}
-        {% include 'group_card.html' with group=group %}
-    {% endfor %}
+    <div id="group-container">
+        {% for group in groups %}
+            {% include 'group_card.html' with group=group %}
+        {% endfor %}
+    </div>
 {% else %}
     {% if isUserHome %}
         <p>You are not in any groups.</p>
