--- a/resumes/templates/resumes/index.html
+++ b/resumes/templates/resumes/index.html
@@ -56,7 +56,7 @@
 <div class="options">
     <form id="search" method="GET" action="{% url 'resumeSearch' %}">
         <input id="search-bar" class="search-bar" type="text" name="query" placeholder="Search">
-        <button class="darkblue-btn search-btn" type="submit">Search resumes</button>
+        <button class="darkblue-btn search-btn" type="submit">Search</button>
     </form>
 
     <a class="darkblue-btn" href="{% url 'upload' %}">Upload a resume</a>
