--- a/resumes/templates/resumes/user.html
+++ b/resumes/templates/resumes/user.html
@@ -13,7 +13,7 @@
 {% block content %}
 {% if isUserHome %}
     <h1 class="page-header">Home</h1>
-    <p class="page-description">Hello, {{ user }}! This is your homepage, where you can view your resumes and see alerts from groups.</p>
+    <p class="page-description">Hello, {{ user }}!</p>
 {% else %}
     <h1 class="page-header">{{ thisPageUsername }}</h1>
     <p class="page-description">You are viewing {{ thisPageUsername}}'s page.</p>
@@ -92,7 +92,16 @@
     {% endif %}
 {% endif %}
 
+
 <h2 class="sub-header">Groups</h2>
+
+{% if isUserHome %}
+    <div class="options">
+        <a class="darkblue-btn" href="{% url 'groups' %}">Explore</a>
+        <a class="darkblue-btn" href="{% url 'creategroup' %}">Create</a>
+    </div>
+{% endif %}
+
 {% if groups %}
     <div id="group-container">
         {% for group in groups %}
