--- a/resumes/templates/resumes/user.html
+++ b/resumes/templates/resumes/user.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'resumes/user.css' %}">
     <script src="{% static 'resumes/user.js' %}"></script>
     <script src="{% static 'resume_card.js' %}"></script>
-    <script src="{% static 'group_activity_card.js' %}"></script>
+    <script src="{% static 'group_notif_card.js' %}"></script>
     <script src="{% static 'group_card.js' %}"></script>
 {% endblock %}
 
