--- a/resumes/templates/resumes/grouppage.html
+++ b/resumes/templates/resumes/grouppage.html
@@ -20,6 +20,7 @@
 
 {% if isOwner %}
     <a class="darkblue-btn main-action-btn" href="{% url 'sendinvite' group.id %}">Invite user</a>
+    <a class="darkblue-btn main-action-btn" href="{% url 'sendinvite' group.id %}" data-toggle="modal" data-target="#inviteModal">Invite user 2</a>
 {% elif not isMember and not joinRequestsPending %}
     <form id="send-request-form" action="{% url 'sendrequest' group.id %}" method="post">
         {% csrf_token %}
@@ -27,6 +28,26 @@
         <div id="send-request-form-error" class="error-msg"></div>
     </form>
 {% endif %}
+
+<div class="modal fade" id="inviteModal" tabindex="-1" role="dialog" aria-labelledby="inviteModalTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLongTitle">Invite users</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="red-btn" data-dismiss="modal">Quit</button>
+          <button type="button" class="darkblue-btn">Send invitations</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 <div class="area">
